# msg-broker-challenge-python

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  assignment.md  docker-compose.yaml  pyproject.toml
broker/: app.py  config.py  models.py  sender_clients.py  storage.py
common/: models.py
reviewer/: app.py  cli.py  config.py
test/: conftest.py  test_broker.py  test_reviewer.py  test_watcher.py
watcher/: app.py  cli.py  models.py  publisher_clients.py
