[project]
name = "msg-broker-challenge-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.5",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.6.1",
    "requests>=2.32.3",
    "uvicorn>=0.32.0",
]


[dependency-groups]
dev = [
    "httpx>=0.27.2",
    "mypy>=1.13.0",
    "pre-commit>=4.0.1",
    "pytest>=8.3.3",
    "ruff>=0.7.4",
    "types-requests>=2.32.0.20241016",
]

[tool.ruff]
# Target Python version
target-version = "py312"

# Line length is set to 88 to be consistent with black
line-length = 88

# Enable pycodestyle and Pyflakes by default
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "B",   # flake8-bugbear
    "I",   # isort
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "SIM", # flake8-simplify
    "RUF", # Ruff-specific rules
]

# Never try to fix `F401` (unused imports)
unfixable = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["broker"]
